# starshot

./: .env.schema  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json  wrangler.toml
.github/workflows/: ci.yml  secret-scanning.yml
launchd/: co.rockstarsunlimited.starshot.plist
scripts/: agent-screenshot.js  agent-screenshot.ts  install-launch-agent.sh  install-macos-finder-service.sh  list-urls.js  list-urls.ts  macos-finder-upload.sh  setup-starshot.js  setup-starshot.ts  starshot-lib.sh  sync-queue.js  sync-queue.ts  uninstall-launch-agent.sh  upload-latest-screenshot.sh
src/: lib.rs  main.rs
