[package]
name = "starshot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
worker = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.3.0", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
